--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="forgot">Forgot Password?</string>
     <string name="create">Create an account</string>
     <string name="add_picture">Add a profile picture</string>
+    <string name="change">Change profile picture</string>
+    <string name="logout">Log out</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
