Dark action bar text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CycleShare</string>
+    <string name="app_name">Byke</string>
     <string name="login">Login</string>
     <string name="sign_up">Signup</string>
     <string name="username">Username</string>
