--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="add_picture">Add a profile picture</string>
     <string name="change">Change profile picture</string>
     <string name="logout">Log out</string>
+    <string name="apiKey">AIzaSyDVS7wjL0Engw_SBwuOETIPAML5JCq1_-A</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
